# solana-chatoverflow

./: .gitignore  Anchor.toml  README.md  overflow-token-metadata.json  package-lock.json  package.json
idl/: chatoverflow.json
programs/chatoverflow/: Cargo.toml
programs/chatoverflow/src/: errors.rs  lib.rs
programs/chatoverflow/src/instructions/: claim_rewards.rs  create_forum.rs  create_token_metadata.rs  initialize_platform.rs  mod.rs  post_answer.rs  post_question.rs  register_user.rs  vote.rs
programs/chatoverflow/src/state/: answer.rs  forum.rs  mod.rs  platform.rs  question.rs  user_profile.rs  vote.rs
scripts/: initialize.ts
tests/: chatoverflow.ts
