[package]
name = "chatoverflow"
version = "0.1.0"
description = "ChatOverflow - On-chain Q&A Forum Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chatoverflow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = "5.0.0-beta.1"
